added references to MAC attacks but did not reference them in main.tex

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1519,5 +1519,109 @@
   url = {https://bikesuite.org/files/v5.2/BIKE_Spec.2024.10.10.1.pdf}
 }
 
+% TODO: some references to attacks on MAC, but I'm not sure if they are meaningful
 
 
+@article{DBLP:journals/tosc/ArmourP19,
+  author       = {Marcel Armour and
+                  Bertram Poettering},
+  title        = {Substitution Attacks against Message Authentication},
+  journal      = {{IACR} Trans. Symmetric Cryptol.},
+  volume       = {2019},
+  number       = {3},
+  pages        = {152--168},
+  year         = {2019},
+  url          = {https://doi.org/10.13154/tosc.v2019.i3.152-168},
+  doi          = {10.13154/TOSC.V2019.I3.152-168},
+  timestamp    = {Mon, 26 Oct 2020 08:46:42 +0100},
+  biburl       = {https://dblp.org/rec/journals/tosc/ArmourP19.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{DBLP:journals/tosc/DuttaJN17,
+  author       = {Avijit Dutta and
+                  Ashwin Jha and
+                  Mridul Nandi},
+  title        = {Tight Security Analysis of EHtM {MAC}},
+  journal      = {{IACR} Trans. Symmetric Cryptol.},
+  volume       = {2017},
+  number       = {3},
+  pages        = {130--150},
+  year         = {2017},
+  url          = {https://doi.org/10.13154/tosc.v2017.i3.130-150},
+  doi          = {10.13154/TOSC.V2017.I3.130-150},
+  timestamp    = {Fri, 23 Aug 2024 08:49:50 +0200},
+  biburl       = {https://dblp.org/rec/journals/tosc/DuttaJN17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{DBLP:journals/tosc/JhaMN17,
+  author       = {Ashwin Jha and
+                  Avradip Mandal and
+                  Mridul Nandi},
+  title        = {On The Exact Security of Message Authentication Using Pseudorandom
+                  Functions},
+  journal      = {{IACR} Trans. Symmetric Cryptol.},
+  volume       = {2017},
+  number       = {1},
+  pages        = {427--448},
+  year         = {2017},
+  url          = {https://doi.org/10.13154/tosc.v2017.i1.427-448},
+  doi          = {10.13154/TOSC.V2017.I1.427-448},
+  timestamp    = {Fri, 23 Aug 2024 08:49:50 +0200},
+  biburl       = {https://dblp.org/rec/journals/tosc/JhaMN17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/eurocrypt/DodisKPW12,
+  author       = {Yevgeniy Dodis and
+                  Eike Kiltz and
+                  Krzysztof Pietrzak and
+                  Daniel Wichs},
+  editor       = {David Pointcheval and
+                  Thomas Johansson},
+  title        = {Message Authentication, Revisited},
+  booktitle    = {Advances in Cryptology - {EUROCRYPT} 2012 - 31st Annual International
+                  Conference on the Theory and Applications of Cryptographic Techniques,
+                  Cambridge, UK, April 15-19, 2012. Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {7237},
+  pages        = {355--374},
+  publisher    = {Springer},
+  year         = {2012},
+  url          = {https://doi.org/10.1007/978-3-642-29011-4\_22},
+  doi          = {10.1007/978-3-642-29011-4\_22},
+  timestamp    = {Sun, 12 Nov 2023 02:15:08 +0100},
+  biburl       = {https://dblp.org/rec/conf/eurocrypt/DodisKPW12.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/crypto/BhaumikCCDGS24,
+  author       = {Ritam Bhaumik and
+                  Bishwajit Chakraborty and
+                  Wonseok Choi and
+                  Avijit Dutta and
+                  J{\'{e}}r{\^{o}}me Govinden and
+                  Yaobin Shen},
+  editor       = {Leonid Reyzin and
+                  Douglas Stebila},
+  title        = {The Committing Security of MACs with Applications to Generic Composition},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2024 - 44th Annual International
+                  Cryptology Conference, Santa Barbara, CA, USA, August 18-22, 2024,
+                  Proceedings, Part {IV}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14923},
+  pages        = {425--462},
+  publisher    = {Springer},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/978-3-031-68385-5\_14},
+  doi          = {10.1007/978-3-031-68385-5\_14},
+  timestamp    = {Fri, 20 Sep 2024 14:01:18 +0200},
+  biburl       = {https://dblp.org/rec/conf/crypto/BhaumikCCDGS24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+% end of MAC attack references <<<<<<<<<<<<<<<<<<<<<
