--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1149,6 +1149,17 @@
   url = {https://nvlpubs.nist.gov/nistpubs/Legacy/SP/nistspecialpublication800-38d.pdf}
 }
 
+@techreport{FIPS203,
+  author       = {{National Institute of Standards and Technology}},
+  title        = {Module-Lattice-Based Key-Encapsulation Mechanism Standard},
+  institution  = {Department of Commerce, Washington, D.C.},
+  year         = {2024},
+  type         = {Federal Information Processing Standards Publication},
+  number       = {NIST FIPS 203},
+  doi          = {10.6028/NIST.FIPS.203},
+  url          = {https://doi.org/10.6028/NIST.FIPS.203}
+}
+
 @techreport{NIST80038B,
   author = {{National Institute of Standards and Technology}},
   title = {Recommendation for Block Cipher Modes of Operation: The {CMAC} Mode for Authentication},
